--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   cached_network_image: ^3.2.3
   image_picker: ^0.8.5+3
   adaptive_dialog: ^1.8.0+1
+  chips_choice: ^3.0.0
+  
   geolocator: ^8.1.1
   google_maps_flutter:
   google_place: ^0.4.7
