--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   open_filex: ^4.3.2
   file_picker: ^5.2.5
   spreadsheet_table: ^1.0.0
+  android_intent_plus: ^3.1.5
   
   geolocator: ^8.1.1
   google_maps_flutter:
