--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   spreadsheet_table: ^1.0.0
   android_intent_plus: ^3.1.5
   flutter_image_slideshow: ^0.1.4
+  socket_io_client: 1.0.1
+  just_audio: ^0.9.32
   
   geolocator: ^8.1.1
   google_maps_flutter:
