FIX add deal_product  in deal_create_screen

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -38,9 +38,9 @@
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
-			<true/>
+		<true/>
 		<key>NSAllowsArbitraryLoadsForMedia</key>
-			<true/>
+		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>Разрешите Izowork доступ к камере для снимка фото Вашего профиля</string>
@@ -74,6 +74,8 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
+	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 </dict>
 </plist>
