--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   audiofileplayer: any
   liquid_pull_to_refresh: ^3.0.1
   curl_logger_dio_interceptor: ^1.0.0
+  tab_container: ^2.0.0
 
   geolocator: ^8.1.1
   google_maps_flutter:
