--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_native_splash: any
   intl: any
   hexcolor: ^2.0.7
-  flutter_svg: ^0.22.0
+  flutter_svg: any
   provider:
   dio: any
   badges: any
@@ -65,7 +65,8 @@ dependencies:
   audiofileplayer: any
   liquid_pull_to_refresh: ^3.0.1
   curl_logger_dio_interceptor: ^1.0.0
-  tab_container: ^2.0.0
+  tab_container: any
+  easy_debounce: ^2.0.3
 
   geolocator: ^8.1.1
   google_maps_flutter:
@@ -73,6 +74,11 @@ dependencies:
   google_geocoding_api: ^1.0.1+2
   google_maps_cluster_manager: ^3.0.0+1
 
+  firebase_core: ^2.14.0
+  firebase_messaging: ^14.6.4
+  # firebase_analytics: ^10.4.3
+  flutter_local_notifications: ^17.0.0
+  flutter_app_badger: ^1.5.0
 
 dev_dependencies:
   flutter_test:
