--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.15+17
+version: 1.0.16+18
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -53,12 +53,12 @@ dependencies:
   image_picker: ^0.8.5+3
   adaptive_dialog: ^1.8.0+1
   chips_choice: ^3.0.0
-  url_launcher: ^6.1.7
+  url_launcher: ^6.3.0
   fl_chart: ^0.68.0
-  open_filex: ^4.3.2
+  open_filex: ^4.5.0
   file_picker: ^5.2.5
   spreadsheet_table: ^1.0.0
-  android_intent_plus: ^5.0.2
+  android_intent_plus: ^5.1.0
   flutter_image_slideshow: ^0.1.4
   socket_io_client: 1.0.1
   record: ^4.4.4
@@ -80,9 +80,9 @@ dependencies:
   # google_maps_cluster_manager: ^3.0.0+1
   google_maps_cluster_manager_2: 3.1.0
 
-  firebase_core: ^2.14.0
-  firebase_messaging: ^14.6.4
-  firebase_analytics: ^10.4.3
+  firebase_core: ^3.5.0
+  firebase_messaging: ^15.1.2
+  firebase_analytics: 11.3.2
   flutter_local_notifications: ^17.0.0
   flutter_app_badger: ^1.5.0
 
