--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,104 +1,76 @@
 name: izowork
 description: A new Flutter project.
 
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.16+18
+version: 1.0.15+17
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  shared_preferences: ^2.0.15
+  cupertino_icons: ^1.0.8
+  shared_preferences: ^2.3.2
   flutter_automation: ^2.0.0
-  flutter_launcher_icons: any
-  flutter_native_splash: any
-  intl: any
-  hexcolor: ^2.0.7
+  flutter_launcher_icons: ^0.14.1
+  flutter_native_splash: ^2.4.1
+  intl: ^0.19.0
+  hexcolor: ^3.0.1
   flutter_svg: any
-  provider:
-  dio: any
-  get_it: ^7.6.7
-  badges: any
-  modal_bottom_sheet: 3.0.0-pre
-  scrollable_clean_calendar: 1.5.0
-  wheel_chooser: ^1.0.0
-  blur: ^3.1.0
-  oktoast: any
-  cached_network_image: ^3.2.3
-  image_picker: ^0.8.5+3
-  adaptive_dialog: ^1.8.0+1
-  chips_choice: ^3.0.0
-  url_launcher: ^6.3.0
-  fl_chart: ^0.68.0
+  provider: ^6.1.2
+  dio: ^5.7.0
+  get_it: ^8.0.0
+  badges: ^3.1.2
+  modal_bottom_sheet: ^3.0.0
+  scrollable_clean_calendar: ^1.5.0
+  wheel_chooser: ^1.1.2
+  blur: ^4.0.0
+  oktoast: ^3.4.0
+  cached_network_image: any
+  image_picker: ^1.1.2
+  adaptive_dialog: any
+  chips_choice: ^3.0.1
+  url_launcher: ^6.3.1
+  fl_chart: ^0.69.0
   open_filex: ^4.5.0
-  file_picker: ^5.2.5
+  file_picker: ^8.1.2
   spreadsheet_table: ^1.0.0
   android_intent_plus: ^5.1.0
-  flutter_image_slideshow: ^0.1.4
-  socket_io_client: 1.0.1
-  record: ^4.4.4
-  audioplayers: ^3.0.1
-  audiofileplayer: any
+  flutter_image_slideshow: ^0.1.6
+  socket_io_client: ^1.0.1
+  record: ^5.1.2
+  audioplayers: ^6.1.0
+  # audiofileplayer: ^2.1.1
+  audiofilereader: ^2.1.3
   simple_progress_indicators: ^0.2.0
   liquid_pull_to_refresh: ^3.0.1
-  talker_flutter: ^4.3.4
-  talker_dio_logger: ^4.2.4
-  tab_container: any
+  talker_flutter: ^4.4.1
+  talker_dio_logger: ^4.4.1
+  tab_container: ^3.5.3
   easy_debounce: ^2.0.3
-  flutter_phone_direct_caller: any
+  # flutter_phone_direct_caller: ^2.1.1
   insta_image_viewer: ^1.0.4
 
-  geolocator: ^8.1.1
-  google_maps_flutter:
+  geolocator: ^10.1.1
+  google_maps_flutter: ^2.9.0
   google_place: ^0.4.7
   google_geocoding_api: ^1.5.2
-  # google_maps_cluster_manager: ^3.0.0+1
-  google_maps_cluster_manager_2: 3.1.0
+  google_maps_cluster_manager_2: ^3.2.0
 
-  firebase_core: ^3.5.0
-  firebase_messaging: ^15.1.2
-  firebase_analytics: 11.3.2
-  flutter_local_notifications: ^17.0.0
-  flutter_app_badger: ^1.5.0
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
+  firebase_analytics: ^11.3.3
+  flutter_local_notifications: ^17.2.3
+  flutter_app_badge: ^2.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^1.0.0
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+  flutter_lints: ^1.0.4
 
 flutter_icons:
    android: 'launcher_icon'
@@ -106,12 +78,8 @@ flutter_icons:
    remove_alpha_ios: true
    image_path: 'assets/app_icon.png'
 
-# The following section is specific to Flutter.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   assets:
